# Virie

./: .gitignore  CMakeLists.txt  LICENSE  README.md
contrib/: CMakeLists.txt
contrib/eos_portable_archive/eos/: portable_iarchive.hpp  portable_oarchive.hpp
contrib/epee/demo/: CMakeLists.txt
contrib/epee/include/: cache_helper.h  colored_cout.h  console_handler.h  file_io_utils.h  global_stream_operators.h  gzip_encoding.h  math_helper.h  md5_l.inl  message_writer_mixin.h  misc_log_ex.h  print_fixed_point_helper.h  service_impl_base.h  sha1.inl  string_coding.h  string_tools.h  sync_locked_object.h  syncobj.h  time_helper.h  zlib_helper.h
contrib/epee/include/net/: abstract_tcp_server2.h  abstract_tcp_server2.inl  http_base.h  http_client.h  http_client_via_api_helper.h  http_protocol_handler.inl  http_server_handlers_map2.h  http_server_impl_base.h  levin_client_async.h  levin_protocol_handler.h  levin_protocol_handler_async.h  net_helper.h  net_utils_base.h
contrib/epee/include/serialization/: keyvalue_serialization.h  keyvalue_serialization_overloads.h
contrib/epee/include/storages/: levin_abstract_invoke2.h  portable_storage_from_json.h  portable_storage_to_json.h  portable_storage_val_converters.h
contrib/epee/tests/src/: CMakeLists.txt
contrib/ethereum/: CMakeLists.txt
contrib/ethereum/libethash/: CMakeLists.txt  internal.c  io.h  io_win32.c
contrib/ethereum/libethash-cl/: CMakeLists.txt  ethash_cl_miner.cpp  ethash_cl_miner.h
contrib/ethereum/opencl/lib/: OpenCl.lib
contrib/libethash_cs/: CMakeLists.txt
contrib/libethash_cs/libethash/: CMakeLists.txt
contrib/libethash_cs/libethash/include/ethash/: ethash.h  ethash.hpp  hash_types.hpp
contrib/libethash_cs/libethash/lib/ethash/: CMakeLists.txt
resources/: License.txt
resources/docs/: building_qt_from_sources.md  how_to_build_WinXP_MSVC2015.txt
src/: CMakeLists.txt  version.cmake  version.h.in
src/common/: base58.cpp  base58.h  boost_serialization_helper.h  command_line.cpp  command_line.h  container_utils.h  crypto_boost_serialization.h  db_abstract_accessor.h  db_backend_base.h  db_backend_leveldb.cpp  db_backend_leveldb.h  db_backend_lmdb.cpp  db_backend_lmdb.h  deps_version.h  difficulty_boost_serialization.h  enumerate_container.h  ethash_manager.cpp  ethash_manager.h  ethash_manager_cs.cpp  ethash_manager_cs.h  int-util.h  make_hashable.h  median_db_cache.h  miniupnp_helper.h  mnemonic-encoding.cpp  mnemonic-encoding.h  pod-class.h  unordered_containers_boost_serialization.h  util.cpp  util.h  varint.h
src/connectivity_tool/: conn_tool.cpp
src/crypto/: chacha8.h  crypto.cpp  crypto.h  generic-ops.h  hash.h  random.c
src/currency_core/: account.cpp  account.h  account_boost_serialization.h  alias_helper.h  bc_attachments_helpers.h  bc_attachments_helpers_basic.h  bc_attachments_service_manager.cpp  bc_attachments_service_manager.h  bc_escrow_service.h  bc_offers_serialization.h  bc_offers_service.cpp  bc_offers_service.h  bc_offers_service_basic.h  bc_payments_id.h  bc_payments_id_service.h  block_flags.h  blockchain_storage.cpp  blockchain_storage.h  blockchain_storage_basic.h  blockchain_storage_boost_serialization.h  checkpoints.cpp  checkpoints.h  checkpoints_create.h  connection_context.h  core_runtime_config.h  core_tools.h  currency_basic.h  currency_boost_serialization.h  currency_config.h  currency_core.cpp  currency_core.h  currency_format_utils.cpp  currency_format_utils.h  currency_stat_info.h  difficulty.cpp  difficulty.h  difficulty_cache.cpp  difficulty_cache.h  dispatch_core_events.h  etc_custom_serialization.cpp  (+18 more)
src/currency_protocol/: currency_protocol_defs.h  currency_protocol_handler.h  currency_protocol_handler.inl  currency_protocol_handler_common.h
tests/: CMakeLists.txt  hash-target.cpp
tests/colored_cout_test/: colored_cout_test.cpp
tests/core_tests/: alias_tests.cpp  alias_tests.h  block_reward.cpp  block_reward.h  block_validation.cpp  block_validation.h  chain_split_1.cpp  chain_split_1.h  chain_switch_1.cpp  chain_switch_1.h  chain_switch_pow_pos.cpp  chain_switch_pow_pos.h  chaingen.cpp  chaingen.h  chaingen001.cpp  chaingen001.h  chaingen_helpers.h  chaingen_main.cpp  chaingen_tests_list.h  checkpoints_tests.cpp  checkpoints_tests.h  core_state_helper.h  cumulative_diificulty_adjustments_tests.cpp  cumulative_diificulty_adjustments_tests.h  difficulty_caching.cpp  difficulty_caching.h  double_spend.cpp  double_spend.inl  emission_test.cpp  emission_test.h  escrow_wallet_altchain_test.cpp  escrow_wallet_altchain_test.h  escrow_wallet_common.h  escrow_wallet_tests.cpp  escrow_wallet_tests.h  events_test.cpp  events_test.h  get_random_outs.cpp  get_random_outs.h  integer_overflow.cpp  (+40 more)
tests/db_tests/: db_tests.cpp
tests/difficulty/: data.txt  difficulty.cpp
tests/functional_tests/: core_concurrency_test.cpp  core_concurrency_test.h  deadlock_guard_test.cpp  deadlock_guard_test.h  exec_test.cpp  exec_test.h  generate_test_genesis.cpp  generate_test_genesis.h  main.cpp  miniupnp_test.cpp  miniupnp_test.h  ntp_test.cpp  ntp_test.h  transactions_flow_test.cpp  transactions_flow_test.h  transactions_generation_from_blockchain.cpp  transactions_generation_from_blockchain.h
tests/libethash_test/: libethash_test.cpp
tests/mnemonic_encoding_tests/: mnemonic_encoding_test.cpp
tests/performance_tests/: serialization_performance_test.cpp
tests/rpc_stress/: CMakeLists.txt  rpc_stress.cpp
tests/unit_tests/: argv_processor.cpp  base58.cpp  brain_wallet_test.cpp  chacha8.cpp  db_accessors.cpp  epee_levin_protocol_handler_async.cpp  integrated_address.cpp  main.cpp  pod_array_file_container.cpp  rpc_autodoc.cpp  rpc_serialization.cpp  serialization.cpp  string_tools.cpp  test_container_utils.cpp  test_deflate_encoding.cpp  test_format_utils.cpp  test_math_helper.cpp  test_syncobj.cpp  test_zlib_helper.cpp  time_helper_tests.cpp
utils/: .gitignore  Virie.sh  build_for_linux.sh  build_for_mac_osx.sh  build_for_windows.bat  configure_macos_xcodeproj.sh  macosx_build_config.command  macosx_dmg_builder.sh  setup_32.iss  setup_64.iss
(+319 files in other folders)
